# lab2-tester

./: CMakeLists.txt  README.md  appveyor.yml
VARIANTS/: CMakeLists.txt  VARIANT_1.cpp
test/: CMakeLists.txt
